--- a/assessment.html
+++ b/assessment.html
@@ -2,6 +2,16 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" 
+          content="https://あなたのユーザー名.github.io/assessment/assessment.html" 
+    />
+    <meta property="og:title" 
+          content="あなたのいいところ診断" 
+    />
+    <meta property="og:description"
+          content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" 
+    />
     <link href="assessment.css" rel="stylesheet" />
     <title>あなたのいいところ診断</title>
 </head>
